--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,3 +1,15 @@
+/* Manipulação de tags */
+
+*{
+  margin: 0px;
+  padding: 0px;
+  
+}
+
+html {
+  font-family: "Montserrat";
+}
+
 p {
     font-size: larger;
 }
@@ -35,7 +47,7 @@ thead{
 }
 
 blockquote {
-    font-style: italic;
+  font-style: italic;
     border-left: 3px solid #333;
     padding-left: 20px;
     margin: 10px 0;
@@ -66,8 +78,18 @@ ol{
     font-size:larger;
 }
 
+/*Manipulação de classes */
+
+.cor{   
+  color:aliceblue;
+}
+
+.imagem{
+  text-align: center;
+}
 .cabecalho{
     text-align:center;
+    margin: 10px;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap");
@@ -75,9 +97,6 @@ ol{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-html {
-  font-family: "Montserrat";
 }
 .container {
   min-height: 100vh;
@@ -179,12 +198,4 @@ html {
   }
 
   
-}
-
-.cor{
-    color:aliceblue;
-}
-
-.imagem{
-    text-align: center;
 }
