--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -29,21 +29,33 @@ h2.altaneiro {
 h2.black {
     color:black;
     text-align: center;
-    
+
 }
 
 table {
-    width: 45%;
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    overflow: hidden; 
 }
 
-table, th, tr, td {
-    border: 1px solid black
+thead {
+    background-color: #d3364b;
+    color: rgb(255, 255, 255);
 }
 
-thead{
-    color: #cd0000;
+th, td {
+    padding: 15px;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
 }
 
+tbody tr:hover {
+    background-color: #f5f5f567;
+}
 blockquote {
   font-style: italic;
     border-left: 3px solid #333;
@@ -219,5 +231,10 @@ text-align:center;
   margin:auto;
   margin-left: 100px;
 }
-  
+
+.table-container {
+  margin: 20px auto;
+  width: 80%;
+  text-align: center;
+}
 }
