--- a/estilos/escudos.css
+++ b/estilos/escudos.css
@@ -34,7 +34,7 @@ h2.altaneiro {
 .container{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin: 10px;
     padding: 15px;
     border: solid black 2px;
@@ -44,4 +44,22 @@ h2.altaneiro {
 .cabecalho{
     text-align:center;
     margin: 10px;
+}
+
+.box-start{
+    padding: 15px;
+    border: dashed black 2px;
+    border-radius:  15px;
+}
+
+.box-mid{
+    padding: 15px;
+    border: dashed black 2px;
+    border-radius:  15px;
+}
+
+.box-end{
+    padding: 15px;
+    border: dashed black 2px;
+    border-radius:  15px;
 }
