--- a/estilos/escudos.css
+++ b/estilos/escudos.css
@@ -32,7 +32,7 @@ h2 {
 .titulo{
     text-align: center;
 }
-.container{
+.container-escudos{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
